<resources>

    <string name="app_name">Pirate Places</string>
    <string name="place_ecu">East Carolina University</string>
    <string name="place_duke">Duke University</string>
    <string name="place_ncsu">NC State University</string>
    <string name="place_duke_visitors">Mary, Kevin</string>
    <string name="place_ncsu_visitors">Rob, Mike and Sarah</string>
    <string name="place_ecu_visitors">Shelly</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="check_in_button">Check in</string>
    <string name="checkedin_msg">Checked in</string>
    <string name="notcheckedin_msg">Not Checked in!</string>
    <string name="success_msg">You successfully checked in!</string>
</resources>
