<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="edu.ecu.cs.pirateplaces.CheckInActivity">

    <TextView
        android:id="@+id/place_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:padding="40dp"
        android:text="@string/place_duke" />

    <TextView
        android:id="@+id/checkinstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:padding="40dp"
        android:text="@string/notcheckedin_msg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/checkin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in_button" />

    </LinearLayout>

</LinearLayout>
